# interceder

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
deploy/: bootstrap.sh  com.interceder.gateway.plist  com.interceder.manager.plist  install.sh  update.sh
deploy/skills/meta/: task_reflection.md
docs/: architecture.md  configuration.md  faq.md  install-guide.md  launchd.md  slack-setup.md  troubleshooting.md  webapp.md
docs/superpowers/plans/: 2026-04-09-phase-0-skeleton.md  2026-04-10-curl-install-and-docs.md  2026-04-10-full-implementation-plan.md  2026-04-10-install-update-flow.md
src/interceder/: __main__.py  config.py  schema.py
tests/: conftest.py  test_afk.py  test_api.py  test_approval_checker.py  test_bootstrap_script.py  test_config.py  test_cost_tracker.py  test_db.py  test_gateway.py  test_gateway_slack_integration.py  test_inbox_drain.py  test_install_script.py  test_kill_switch.py  test_l1_user_model.py  test_l3_project.py  test_loop_core.py  test_manager.py  test_memory_archive.py  test_metric.py  test_migration_0002.py  test_migrations.py  test_migrations_real.py  test_outbox_drain.py  test_plists.py  test_proactive.py  test_prompt.py  test_queue.py  test_sandbox.py  test_satisfaction.py  test_scheduler.py  test_schema.py  test_security.py  test_session.py  test_slack_handler.py  test_tiers.py  test_update_script.py  test_worker_mgr.py  test_worker_protocol.py  test_worktree.py  test_ws.py
tests/stubs/: agent_sdk_stub.py
webapp/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp/src/: types.ts
(+58 files in other folders)
