[project]
name = "interceder"
version = "0.0.1"
description = "Remote Claude Code harness — Slack + webapp over Tailscale"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "click>=8.1",
    "keyring>=25.0",
]

[project.scripts]
interceder = "interceder.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interceder"]

[tool.hatch.build.targets.wheel.force-include]
"src/interceder/migrations" = "interceder/migrations"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
